# kia-dashcam-postproccesor

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dashcam.ps1  media-tools.lock.json
.github/workflows/: build-windows-unsigned.yml  ci.yml  release.yml
apps/dashcam-cli/: Cargo.toml
apps/dashcam-cli/src/: main.rs
apps/dashcam-gui/: index.html  package-lock.json  package.json  vite.config.ts
apps/dashcam-gui/src/: main.ts  styles.css
apps/dashcam-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows-signing.conf.json
apps/dashcam-gui/src-tauri/binaries/: README.md
apps/dashcam-gui/src-tauri/capabilities/: default.json
apps/dashcam-gui/src-tauri/icons/: icon.icns
apps/dashcam-gui/src-tauri/src/: lib.rs  main.rs
crates/dashcam-core/: Cargo.toml
crates/dashcam-core/src/: discovery.rs  lib.rs  model.rs  process.rs  timestamp.rs  tools.rs
scripts/: assert-tampered-update-rejected.mjs  build-linux-handbrake.sh  decode-release-keys.mjs  package-cli.mjs  prepare-media-tools.mjs  prepare-tauri-release-config.mjs  set-version.mjs  sign-windows.ps1  verify-macos-app.sh
