[workspace]
members = [
  "crates/dashcam-core",
  "apps/dashcam-cli",
  "apps/dashcam-gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
