[package]
name = "kia-dashcam-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
natord = "1.0.9"
trash = "5.2.5"
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
