[package]
name = "kia-dashcam-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kia_dashcam_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
kia-dashcam-core = { path = "../../../crates/dashcam-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
